Balance Chemical Reaction feature